hardcode map, test html